# cpp-template

./: .clang-format  .clang-tidy  .cmake-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  generate_image.sh  init.sh
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json
apps/: CMakeLists.txt  cpptemplate.bin.cpp  version.hpp.in
cpptemplate/: CMakeLists.txt  cpptemplate.test.cpp
